@@ -307,14 +307,14 @@
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>[7.9,)</version>
+			<version>8.20.1</version>
 		</dependency>
 
 		<!-- OpenId -->
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>oauth2-oidc-sdk</artifactId>
-			<version>5.62</version>
+			<version>8.23</version>
 		</dependency>
 
 		<!-- Project Lombok -->
